# py-cerver

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.beta  Dockerfile.dev  Dockerfile.examples  Dockerfile.local  Dockerfile.python  Dockerfile.test  LICENSE  README.md  api.sh  beta.sh  build.sh  clean.sh  debug.md  development.sh  docker-compose.yml  examples.sh  jwt-rs256.md  local.sh  makefile  path.sh  release.md  run.sh  setup.cfg  setup.py  test.py  test.sh
.github/workflows/: beta.yml  docs.yml  pre-release.yml  production.yml  release.yml  test.yml
cerver/: __init__.py  cerver.py  content.py  files.py  handler.py  headers.py  http.py  lib.py  network.py  packets.py  query.py  request.py  response.py  route.py  status.py  timer.py  version.py
cerver/http/: __init__.py  alg.py  content.py  headers.py  http.py  multipart.py  origin.py  query.py  redirect.py  request.py  response.py  route.py  status.py  validation.py
cerver/threads/: __init__.py  bsem.py  job.py  thread.py  threads.py  worker.py
cerver/types/: __init__.py  string.py
cerver/utils/: __init__.py  log.py  utils.py
examples/: admin.py  api.py  jobs.py  test.py  upload.py  users.py  web.py  wrapper.py
examples/http/: admin.py  api.py  auth.py  jobs.py  multiple.py  quick.py  redirect.py  responses.py  upload.py  users.py  validation.py  videos.py  web.py  wrapper.py
nginx/: build.sh
test/app/: routes.c
test/cerver/: ping.py
test/data/: float.json  good.json  int.json  larger.json  shorter.json  user.json
test/web/: admin.py  api.py  auth.py  jobs.py  multi.py  query.py  (+7 more)
(+15 files in other folders)
