[metadata]
name = pycerver
version = 0.8.7
author = Erick Salas
author_email = erick.salas@ermiry.com
description = PyCerver is a pure Python wrapper around the cerver framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ermiry-com/py-cerver
project_urls =
	Bug Tracker = https://github.com/ermiry-com/py-cerver/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
